- Minor fixes in Tags and many-to-many relationship - Implemented basic searching with Elasticsearch. Works with Name and description for all objects in catalog. Proof of concept, maybe will be moved to a separate module